Add change password endpoint (#17)
* integrate

* add change password use case

* Change status code to 204 not content

* Add reset user password endpoint

* Add reset user password method to client

* Update api image
